--- a/src/pages/Skill/Skill.module.sass
+++ b/src/pages/Skill/Skill.module.sass
@@ -1,16 +1,16 @@
 .progress-bar
   position: relative
   width: 100%
-  min-width: 400px
+  min-width: 500px
   height: 5px
-  background-color: #333
+  background-color: var(--text)
   border-radius: 5px
   overflow: visible
 
   .progress-fill
     width: 0
     height: 100%
-    background-color: #0ef
+    background-color: #f06292
     border-radius: 5px
 
   .percent-tag
@@ -18,7 +18,7 @@
     top: -34px
     left: 50%
     transform: translateX(-50%)
-    background-color: #f44292
+    background-color: #f06292
     color: white
     border-radius: 5px
     font-weight: bold
@@ -48,6 +48,6 @@
 
 .skill-title
   font-size: 1rem
-  color: #0ef
+  color: var(--text)
   margin: 0 0 .2687rem
 
